infra/manifests/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trial-backend
spec:
  template:
    spec:
      containers:
        - name: trial-backend
          image: trial-backend
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 32Mi
