infra/manifests/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trial-backend
spec:
  rules:
    - host: stg-api.devopsirl.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trial-backend
                port: 
                  number: 80
